# encos_tools

./: VERSION.txt  使用说明-新版.docx  使用说明-旧版.docx  使用说明.docx  使用说明.txt  机器人标定操作说明.html  电机标定脚本使用说明.html
doc/: .~用说明-旧版.docx  使用说明.html  使用说明.md  双足机器人工程化配置说明.xlsx  机器人标定操作说明.md  电机标定脚本使用说明.md
scripts/: build.sh  clear.sh  client.sh  run.sh  run_robot.sh  run_single.sh  service.sh
src/driver/encos_driver/: CMakeLists.txt  CMakeLists_v2.txt  package.xml
src/driver/encos_driver/example/: ec_client.cpp  ec_client.h  ec_client.hpp  ec_server.cpp  ec_server.h  ec_server.hpp
src/driver/encos_driver/include/encos_driver/: config.h  math_ops.h  motor_control.h  transmit.h  transmit_v2.h
src/driver/encos_driver/msg/: MotorClearBuff.msg  MotorGetId.msg  MotorGetParam.msg  MotorResetId.msg  MotorSetId.msg  MotorSetParam.msg  MotorSetPos.msg  MotorSetSpeed.msg  MotorSetTorCur.msg  MotorSetTorPos.msg  MotorSetZero.msg
src/driver/encos_driver/src/: math_ops.cpp  motor_control.cpp  transmit.cpp  transmit_v1.cpp  transmit_v2.cpp
